--- a/test.html
+++ b/test.html
@@ -5,5 +5,35 @@
 </head>
 <body>
 	<h2>Hello World</h2>
+
+	<p>HTML 101</p>
+	<p>This is a paragraph</p>
+
+	<!-- This is a comment -->
+
+
+	<!-- cmd / for instant comment -->
+
+	<ul>
+		<li>Structural tags</li>
+		<li>Formatting tags</li>
+	</ul>
+
+	<div> <b>Hey</b> this is a div</div>
+	<em>Emphasis tag</em>
+	<i>Italic tag</i>
+	<sup>Sup tag</sup>
+	<sub>Sub tag</sub>
+	<strong>Strong tag</strong>
+
+	<table border=1>
+		<tr>
+			<td>1</td>
+			<td>2</td>
+			<td>3</td>
+		</tr>
+	</table>
+
+
 </body>
 </html>
